--- a/index.html
+++ b/index.html
@@ -14,90 +14,122 @@
   <body>
     <h3>Categories Table ( At the bottom )</h3>
     <h6>
-      <p>Inspired by:</p>
+      <p id="inspiredby">Inspired by:</p>
       <a href="https://developer.android.com/" target="_blank"
         >https://developer.android.com/</a
       >
     </h6>
     <hr />
     <main>
-      <div>
-        <h4 class="category-title">more android</h4>
-        <ul class="category-items-list">
-          <li>
-            <a href="https://www.android.com/">Android</a>
-          </li>
-          <li>
-            <a href="https://www.android.com/">Android for enterprise</a>
-          </li>
-          <li>
-            <a href="https://www.android.com/">Security</a>
-          </li>
-          <li>
-            <a href="https://www.android.com/">Source</a>
-          </li>
-          <li>
-            <a href="https://www.android.com/">News</a>
-          </li>
-          <li>
-            <a href="https://www.android.com/">Blog</a>
-          </li>
-          <li>
-            <a href="https://www.android.com/">Podcasts</a>
-          </li>
-        </ul>
-      </div>
-      <div>
-        <h4 class="category-title">DISCOVER</h4>
-        <ul class="category-items-list">
-          <li>Gaming</li>
-          <li>Machine Learning</li>
-          <li>Privacy</li>
-          <li>5G</li>
-        </ul>
-      </div>
-      <div>
-        <h4 class="category-title">ANDROID DEVICES</h4>
-        <ul class="category-items-list">
-          <li>Large screens</li>
-          <li>Wear OS</li>
-          <li>Android TV</li>
-          <li>Android for cars</li>
-          <li>Android Things</li>
-          <li>Chrome OS devices</li>
-        </ul>
-      </div>
-      <div>
-        <h4 class="category-title">RELEASES</h4>
-        <ul class="category-items-list">
-          <li>Android 13</li>
-          <li>Android 12</li>
-          <li>Android 11</li>
-          <li>Android 10</li>
-          <li>Pie</li>
-          <li>Oreo</li>
-          <li>Nougat</li>
-        </ul>
-      </div>
-      <div>
-        <h4 class="category-title">DOCUMENTATION AND DOWNLOADS</h4>
-        <ul class="category-items-list">
-          <li>Android Studio guide</li>
-          <li>Developers guides</li>
-          <li>API reference</li>
-          <li>Download Studio</li>
-          <li>Android NDK</li>
-        </ul>
-      </div>
-      <div>
-        <h4 class="category-title">SUPPORT</h4>
-        <ul class="category-items-list">
-          <li>Report platform bug</li>
-          <li>Report documentation bug</li>
-          <li>Google Play support</li>
-          <li>Join research studies</li>
-        </ul>
-      </div>
+      <section class="socialmedia">
+        <div id="twitter">
+          <a href="https://twitter.com/AndroidDev">
+            <img
+              src="https://www.gstatic.com/devrel-devsite/prod/vd277a93d7226f1fcf53372e6780919bb823bca6ca1c3adbaa8a14ef6554ad67d/android/images/logo-twitter.svg"
+            />
+            <h4>Twitter</h4>
+          </a>
+          <p>Follow @AndroidDev on Twitter</p>
+        </div>
+        <div id="youtube">
+          <a href="https://www.youtube.com/user/androiddevelopers">
+            <img
+              src="https://www.gstatic.com/images/icons/material/product/2x/youtube_48dp.png"
+            />
+            <h4>YouTube</h4>
+          </a>
+          <p>Check out Android Developers on YouTube</p>
+        </div>
+        <div id="linkedin">
+          <a href="https://www.linkedin.com/showcase/androiddev">
+            <img
+              src="https://www.gstatic.com/devrel-devsite/prod/vd277a93d7226f1fcf53372e6780919bb823bca6ca1c3adbaa8a14ef6554ad67d/android/images/logo-linkedin.svg"
+            />
+            <h4>LinkedIn</h4>
+          </a>
+          <p>Connect with the Android Developers community on LinkedIn</p>
+        </div>
+      </section>
+      <hr />
+      <section class="categories">
+        <div>
+          <h4 class="category-title">more android</h4>
+          <ul class="category-items-list">
+            <li>
+              <a href="https://www.android.com/">Android</a>
+            </li>
+            <li>
+              <a href="https://www.android.com/">Android for enterprise</a>
+            </li>
+            <li>
+              <a href="https://www.android.com/">Security</a>
+            </li>
+            <li>
+              <a href="https://www.android.com/">Source</a>
+            </li>
+            <li>
+              <a href="https://www.android.com/">News</a>
+            </li>
+            <li>
+              <a href="https://www.android.com/">Blog</a>
+            </li>
+            <li>
+              <a href="https://www.android.com/">Podcasts</a>
+            </li>
+          </ul>
+        </div>
+        <div>
+          <h4 class="category-title">DISCOVER</h4>
+          <ul class="category-items-list">
+            <li>Gaming</li>
+            <li>Machine Learning</li>
+            <li>Privacy</li>
+            <li>5G</li>
+          </ul>
+        </div>
+        <div>
+          <h4 class="category-title">ANDROID DEVICES</h4>
+          <ul class="category-items-list">
+            <li>Large screens</li>
+            <li>Wear OS</li>
+            <li>Android TV</li>
+            <li>Android for cars</li>
+            <li>Android Things</li>
+            <li>Chrome OS devices</li>
+          </ul>
+        </div>
+        <div>
+          <h4 class="category-title">RELEASES</h4>
+          <ul class="category-items-list">
+            <li>Android 13</li>
+            <li>Android 12</li>
+            <li>Android 11</li>
+            <li>Android 10</li>
+            <li>Pie</li>
+            <li>Oreo</li>
+            <li>Nougat</li>
+          </ul>
+        </div>
+        <div>
+          <h4 class="category-title">DOCUMENTATION AND DOWNLOADS</h4>
+          <ul class="category-items-list">
+            <li>Android Studio guide</li>
+            <li>Developers guides</li>
+            <li>API reference</li>
+            <li>Download Studio</li>
+            <li>Android NDK</li>
+          </ul>
+        </div>
+        <div>
+          <h4 class="category-title">SUPPORT</h4>
+          <ul class="category-items-list">
+            <li>Report platform bug</li>
+            <li>Report documentation bug</li>
+            <li>Google Play support</li>
+            <li>Join research studies</li>
+          </ul>
+        </div>
+      </section>
     </main>
   </body>
 </html>
