updated community section and animatoins

--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <link rel="stylesheet" href="styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+
     <link
-      href="https://fonts.googleapis.com/css2?family=Dosis:wght@300&family=Montserrat:ital@0;1&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Dosis:wght@300&family=Montserrat:ital,wght@0,400;0,600;0,700;1,400&display=swap"
       rel="stylesheet"
     />
   </head>
@@ -21,6 +22,63 @@
     </h6>
     <hr />
     <main>
+      <section class="community">
+        <h1>Visit Our Community</h1>
+        <div class="visit-our-community">
+          <div class="community-container">
+            <img
+              src="https://developer.android.com/static/images/logos/stack-overflow.svg"
+            />
+            <h3>Stack Overflow Android Community</h3>
+            <p>
+              Ask questions and get help and tips from Android developers in our
+              Stack Overflow community
+            </p>
+            <div class="learnmore-container">
+              <a
+                href="https://stackoverflow.com/questions/tagged/android"
+                id="stackoverflow-learnmore"
+              >
+                Learn more
+              </a>
+              <div></div>
+            </div>
+          </div>
+          <div class="community-container">
+            <img
+              src="https://www.gstatic.com/devrel-devsite/prod/vd277a93d7226f1fcf53372e6780919bb823bca6ca1c3adbaa8a14ef6554ad67d/android/images/logo-twitter.svg"
+            />
+            <h3>Twitter for Android Developers</h3>
+            <p>
+              Follow our Twitter and get real-time updates and announcements
+              related to Android development
+            </p>
+            <a
+              href="https://twitter.com/AndroidDev"
+              id="twitter-community-learnmore"
+            >
+              Learn more
+            </a>
+          </div>
+          <div class="community-container">
+            <img
+              src="https://developer.android.com/static/images/logos/google-developer-logomark-color-square-1000-1000.png"
+            />
+            <h3>Google Developers Community</h3>
+            <p>
+              Connect with fellow developers and startups in your area, hear
+              from industry experts, share your skills, and learn
+            </p>
+            <a
+              href="https://developers.google.com/community/gdg"
+              id="google-community-learnmore"
+            >
+              Learn more
+            </a>
+          </div>
+        </div>
+      </section>
+      <hr />
       <section class="socialmedia">
         <div id="twitter">
           <a href="https://twitter.com/AndroidDev">
