added main header

--- a/index.html
+++ b/index.html
@@ -13,14 +13,63 @@
   </head>
 
   <body>
-    <h3>Categories Table ( At the bottom )</h3>
+    <nav>
+      <div></div>
+      <a href="https://developer.android.com/" class="title-image">
+        <img
+          src="https://www.gstatic.com/devrel-devsite/prod/vd277a93d7226f1fcf53372e6780919bb823bca6ca1c3adbaa8a14ef6554ad67d/android/images/lockup.svg"
+        />
+      </a>
+      <div class="nav-main-container">
+        <ul>
+          <li>Platform</li>
+          <li>Android Studio</li>
+          <li>Google Play</li>
+          <li>Jetpack</li>
+          <li>Kotlin</li>
+        </ul>
+        <div class="nav-right-container">
+          <select>
+            <option>English</option>
+            <option>Bahasa Indonesia</option>
+            <option>Español – América Latina</option>
+            <option>Português – Brasil</option>
+            <option>中文 – 简体</option>
+            <option>日本語</option>
+            <option>한국어</option>
+          </select>
+          <a
+            href="https://developer.android.com/_d/signin?continue=https%3A%2F%2Fdeveloper.android.com%2F&prompt=select_account"
+            >Sign in</a
+          >
+        </div>
+      </div>
+      <div></div>
+    </nav>
+    <section class="main-text-image-container">
+      <div class="main-text-image-container-left">
+        <h1>Android for Developers</h1>
+        <p>
+          Modern tools and resources to help you build experiences that people
+          love, faster and easier, across every Android device.
+        </p>
+        <div class="search-icon-container">
+          <img src="/search-icon.svg" alt="Search" class="search-icon" />
+          <input type="search" id="search-box" placeholder="Search" />
+        </div>
+      </div>
+      <div class="main-text-image-container-right">
+        <img src="https://developer.android.com/images/home/billboard-bg.svg" />
+      </div>
+    </section>
+    <!-- <h3>Categories Table ( At the bottom )</h3>
     <h6>
       <p id="inspiredby">Inspired by:</p>
       <a href="https://developer.android.com/" target="_blank"
         >https://developer.android.com/</a
       >
     </h6>
-    <hr />
+    <hr /> -->
     <main>
       <section class="community">
         <h1>Visit Our Community</h1>
