updated to suresh techs

--- a/index.html
+++ b/index.html
@@ -16,17 +16,18 @@
     <nav>
       <div></div>
       <a href="https://developer.android.com/" class="title-image">
-        <img
+        <!-- <img
           src="https://www.gstatic.com/devrel-devsite/prod/vd277a93d7226f1fcf53372e6780919bb823bca6ca1c3adbaa8a14ef6554ad67d/android/images/lockup.svg"
-        />
+        /> -->
+        <img src="/suresh-techs-logo.jpg" />
       </a>
       <div class="nav-main-container">
         <ul>
-          <li>Platform</li>
-          <li>Android Studio</li>
-          <li>Google Play</li>
-          <li>Jetpack</li>
-          <li>Kotlin</li>
+          <li>Python</li>
+          <li>Java</li>
+          <li>C Programming</li>
+          <li>HTML</li>
+          <li>Git</li>
         </ul>
         <div class="nav-right-container">
           <select>
@@ -48,10 +49,10 @@
     </nav>
     <section class="main-text-image-container">
       <div class="main-text-image-container-left">
-        <h1>Android for Developers</h1>
+        <h1>Suresh Techs YouTube Channel</h1>
         <p>
-          Modern tools and resources to help you build experiences that people
-          love, faster and easier, across every Android device.
+          ప్రేమ అన్న పదానికి రెండు అక్షరాలు కానీ మీరు నాపైన చూపించిన ప్రేమ అనంతం
+          నేను సురేష్ మీ ప్రేమకు బానిస
         </p>
         <div class="search-icon-container">
           <img src="/search-icon.svg" alt="Search" class="search-icon" />
@@ -59,7 +60,7 @@
         </div>
       </div>
       <div class="main-text-image-container-right">
-        <img src="https://developer.android.com/images/home/billboard-bg.svg" />
+        <img src="/techs.png" width="400px" height="400px" />
       </div>
     </section>
     <!-- <h3>Categories Table ( At the bottom )</h3>
@@ -72,13 +73,13 @@
     <hr /> -->
     <main>
       <section class="community">
-        <h1>Visit Our Community</h1>
+        <h1>Visit Our Popular Courses</h1>
         <div class="visit-our-community">
           <div class="community-container">
             <img
               src="https://developer.android.com/static/images/logos/stack-overflow.svg"
             />
-            <h3>Stack Overflow Android Community</h3>
+            <h3>Python 11 Hours Complete Course</h3>
             <p>
               Ask questions and get help and tips from Android developers in our
               Stack Overflow community
@@ -97,7 +98,7 @@
             <img
               src="https://www.gstatic.com/devrel-devsite/prod/vd277a93d7226f1fcf53372e6780919bb823bca6ca1c3adbaa8a14ef6554ad67d/android/images/logo-twitter.svg"
             />
-            <h3>Twitter for Android Developers</h3>
+            <h3>C Programming 18 Hours Complete Course</h3>
             <p>
               Follow our Twitter and get real-time updates and announcements
               related to Android development
@@ -113,11 +114,40 @@
             <img
               src="https://developer.android.com/static/images/logos/google-developer-logomark-color-square-1000-1000.png"
             />
-            <h3>Google Developers Community</h3>
+            <h3>Git 5 Hourse Complete Course</h3>
             <p>
               Connect with fellow developers and startups in your area, hear
               from industry experts, share your skills, and learn
             </p>
+            <a
+              href="https://developers.google.com/community/gdg"
+              id="google-community-learnmore"
+            >
+              Learn more
+            </a>
+          </div>
+          <div class="community-container">
+            <img
+              src="https://developer.android.com/static/images/logos/google-developer-logomark-color-square-1000-1000.png"
+            />
+            <h3>HTML 5 Hours Complete Course</h3>
+            <p>
+              Connect with fellow developers and startups in your area, hear
+              from industry experts, share your skills, and learn
+            </p>
+            <a
+              href="https://developers.google.com/community/gdg"
+              id="google-community-learnmore"
+            >
+              Learn more
+            </a>
+          </div>
+          <div class="community-container">
+            <img
+              src="https://developer.android.com/static/images/logos/google-developer-logomark-color-square-1000-1000.png"
+            />
+            <h3>Java Complete Course</h3>
+            <p>Three parts completed</p>
             <a
               href="https://developers.google.com/community/gdg"
               id="google-community-learnmore"
