--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
             />
             <h4>Twitter</h4>
           </a>
-          <p>Follow @AndroidDev on Twitter</p>
+          <p>Follow @SureshTechs on Twitter</p>
         </div>
         <div id="youtube">
           <a href="https://www.youtube.com/user/androiddevelopers">
@@ -175,7 +175,7 @@
             />
             <h4>YouTube</h4>
           </a>
-          <p>Check out Android Developers on YouTube</p>
+          <p>Check out Suresh Techs on YouTube</p>
         </div>
         <div id="linkedin">
           <a href="https://www.linkedin.com/showcase/androiddev">
@@ -184,89 +184,90 @@
             />
             <h4>LinkedIn</h4>
           </a>
-          <p>Connect with the Android Developers community on LinkedIn</p>
+          <p>Follow @SureshTechs on LinkedIn</p>
         </div>
       </section>
       <hr />
       <section class="categories">
         <div>
-          <h4 class="category-title">more android</h4>
+          <h4 class="category-title">Upcoming courses</h4>
           <ul class="category-items-list">
             <li>
-              <a href="https://www.android.com/">Android</a>
+              <a href="https://www.android.com/">Complete Java Course</a>
             </li>
             <li>
-              <a href="https://www.android.com/">Android for enterprise</a>
+              <a href="https://www.android.com/">React JS</a>
             </li>
             <li>
-              <a href="https://www.android.com/">Security</a>
+              <a href="https://www.android.com/">Android Apps</a>
             </li>
             <li>
-              <a href="https://www.android.com/">Source</a>
+              <a href="https://www.android.com/">DevOps</a>
             </li>
             <li>
-              <a href="https://www.android.com/">News</a>
+              <a href="https://www.android.com/">Flutter</a>
             </li>
             <li>
-              <a href="https://www.android.com/">Blog</a>
+              <a href="https://www.android.com/">IOT</a>
             </li>
             <li>
-              <a href="https://www.android.com/">Podcasts</a>
+              <a href="https://www.android.com/">Machine Learning</a>
             </li>
           </ul>
         </div>
         <div>
-          <h4 class="category-title">DISCOVER</h4>
+          <h4 class="category-title">Popular by views</h4>
           <ul class="category-items-list">
-            <li>Gaming</li>
-            <li>Machine Learning</li>
-            <li>Privacy</li>
-            <li>5G</li>
+            <li>Python</li>
+            <li>Git</li>
+            <li>C Programming</li>
+            <li>HTML</li>
+            <li>Java</li>
           </ul>
         </div>
         <div>
-          <h4 class="category-title">ANDROID DEVICES</h4>
+          <h4 class="category-title">Active Subscribers</h4>
           <ul class="category-items-list">
-            <li>Large screens</li>
-            <li>Wear OS</li>
-            <li>Android TV</li>
-            <li>Android for cars</li>
-            <li>Android Things</li>
-            <li>Chrome OS devices</li>
+            <li>Sai Ganesh</li>
+            <li>Murali</li>
+            <li>Ashok</li>
+            <li>Hemalatha</li>
+            <li>Suresh</li>
+            <li>Naresh</li>
           </ul>
         </div>
         <div>
-          <h4 class="category-title">RELEASES</h4>
+          <h4 class="category-title">Notes</h4>
           <ul class="category-items-list">
-            <li>Android 13</li>
-            <li>Android 12</li>
-            <li>Android 11</li>
-            <li>Android 10</li>
-            <li>Pie</li>
-            <li>Oreo</li>
-            <li>Nougat</li>
-          </ul>
-        </div>
-        <div>
-          <h4 class="category-title">DOCUMENTATION AND DOWNLOADS</h4>
-          <ul class="category-items-list">
-            <li>Android Studio guide</li>
-            <li>Developers guides</li>
-            <li>API reference</li>
-            <li>Download Studio</li>
-            <li>Android NDK</li>
+            <li>Python</li>
+            <li>Git</li>
+            <li>C Programming</li>
+            <li>HTML</li>
+            <li>Java</li>
           </ul>
         </div>
         <div>
           <h4 class="category-title">SUPPORT</h4>
           <ul class="category-items-list">
-            <li>Report platform bug</li>
-            <li>Report documentation bug</li>
-            <li>Google Play support</li>
-            <li>Join research studies</li>
+            <li>Like</li>
+            <li>Share</li>
+            <li>Subscribe</li>
           </ul>
         </div>
       </section>
+      <hr />
+      <footer>
+        <ul>
+          <li><a href="">Privacy</a></li>
+          <li><a href="">License</a></li>
+          <li><a href="">Other information</a></li>
+        </ul>
+        <div class="bottom-buttons">
+          <button class="round-button-like">Like</button>
+          <button class="round-button-share">Share</button>
+          <button class="round-button-subscribe">Subscribe</button>
+        </div>
+      </footer>
     </main>
   </body>
 </html>
