--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Categories Table - Android Developers</title>
+    <title>Suresh Techs Website</title>
+    <meta charset="UTF-8" />
+    <meta name="description" content="Suresh Techs Website" />
+    <meta name="author" content="Suresh Yadam" />
+    <!-- <meta name="viewport" content="width=device-width,initial-scale=1.0" /> -->
     <link rel="stylesheet" href="styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
